homescreen alignment fixed

--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -1,6 +1,8 @@
 body
   color: black
   overflow: hidden
+  background-image: url('http://il6.picdn.net/shutterstock/videos/11498153/thumb/1.jpg')
+  background-size: cover
 
 h1
     margin: 0
@@ -9,7 +11,6 @@ h1
     text-shadow: 5px 5px 10px blue
     color: white
     text-transform: uppercase
-    background-color: white
     text-align: center
 
 nav ul
@@ -33,8 +34,28 @@ nav ul
 h2
   text-transform: uppercase
   font-size: 20px
-  margin: 50px
 
 .homeP
-  margin-left: 50px
+  display: flex
+  justify-content: flex-start
   width: 500px
+
+
+main
+  display: flex
+  margin-top: 50px
+  padding-left: 150px
+  padding-right: 150px
+  flex-direction: column
+  columns: 2
+
+.HS1
+  display: flex
+  align-self: flex-end
+  margin-top: -280px
+  background-image: url('/src/Headshot2.jpg')
+  background-size: cover
+  height: 500px
+  width: 350px
+  border: 2px solid blue
+  box-shadow: 2px 2px 2px grey
